--- a/simlane/templates/base.html
+++ b/simlane/templates/base.html
@@ -19,13 +19,6 @@
       }
     </script>
     {% block head_scripts %}
-      <script>
-        window.isAuthenticated = {
-          {
-            request.user.is_authenticated | yesno: "true,false"
-          }
-        };
-      </script>
     {% endblock %}
   </head>
   <body hx-headers='{"x-csrftoken": "{{ csrf_token }}"}'
@@ -33,7 +26,7 @@
     {% block body %}
       <div class="flex-grow flex flex-col">
         {% include 'components/navbar.html' %}
-        <div class="max-w-7xl w-full mx-auto px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="max-w-7xl w-full h-full mx-auto p-4">
           {% include 'components/messages.html' %}
           <main id="main-content">
             {% block main %}
