--- a/simlane/templates/core/home_content_partial.html
+++ b/simlane/templates/core/home_content_partial.html
@@ -26,7 +26,7 @@
         </svg>
         Dashboard
       </a>
-      <a href="{% url 'users:sim_profiles' %}"
+      <a href="{% url 'users:profile_sim_profiles' %}"
          class="inline-flex items-center px-6 py-3 border border-gray-300 dark:border-gray-600 text-base font-medium rounded-md text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700">
         <svg class="w-5 h-5 mr-2"
              fill="none"
